# idd

./: .gitignore  README.md  diff_driver.py  differ.py  driver.py  grid_layout5_col_span.tcss  idd.py  layout.tcss  pyproject.toml  requirements.txt  tdiff.py
.github/workflows/: release.yml
debuggers/gdb/: gdb_commands.py  gdb_driver.py  gdb_mi_driver.py  idd_gdb_controller.py  utils.py
debuggers/lldb/: lldb_driver.py  lldb_extensions.py
src/idd/: __main__.py  cli.py  diff_driver.py  differ.py  driver.py  layout.tcss  utlity.py
src/idd/debuggers/gdb/: gdb_commands.py  gdb_driver.py  gdb_mi_driver.py  idd_gdb_controller.py
src/idd/debuggers/lldb/: lldb_commands.py  lldb_controller.py  lldb_driver.py  lldb_extensions.py  lldb_io.py  lldb_new_driver.py
src/idd/ui/: diff_area.py  figlet_text.py  footer.py  scroll_window.py  scrollable_area.py
test/: compile_tests.py
test/df_dynamic_vars_address/: program.cxx
test/dynamic_vars_address/: program.cxx
test/local_vars_address/: program.cxx
test/local_vars_switched/: program.cxx
test/pointer_offset/: program.cxx
test/pointer_simple_class/: program.cxx
test/recursive_factorial/: program.cxx
test/recursive_fib/: program.cxx
test/recursive_str/: program.cxx
test/simple/: program.cxx
test/simple_functions_chain/: program.cxx
test/strace_sample/: program.cxx
test/vectors/: program.cxx
ui/: diff_area.py  figlet_text.py  footer.py  header.py  scroll_window.py  scrollable_area.py
