[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin Vassilev" },
    { name = "Vassil Vassilev" }, 
    { name = "Alexander Penev" },
]
requires-python = ">=3.9"
dependencies = [
  "pygdbmi",
  "rich",
  "textual",
]


[project.scripts]
idd = "idd.cli:main"
