[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idd"
version = "1.1.0"
description = "A tool for performing interactive dynamic differential debugging capable to identify functional and performance regressions."
readme = "README.md"
authors = [
    { name = "Martin Vassilev" },
    { name = "Vassil Vassilev" }, 
    { name = "Alexander Penev" },
]
requires-python = ">=3.9"
dependencies = [
  "pygdbmi",
  "rich",
  "textual",
]


[project.scripts]
idd = "idd.cli:main"
